test/spec_vectors/conversions/fail/module_19.wat
(module (func (result f32) (f32.reinterpret_i32 (i64.const 0))))